Empty files should not succeed in loading (as WebVTT)

https://bugs.webkit.org/show_bug.cgi?id=260409
rdar://problem/114118292

Reviewed by NOBODY (OOPS!).

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://chromium.googlesource.com/chromium/src.git/+/0983d4b64cb5f519684f773daa27b2ac9b8f8688

Empty files will naturally not have a valid signature, so should fail
the signature check. When there's no data, the loader will not get any
processNewCueData() callback, and hence not create a VTTParser. The
notifyFinished() callback only checked for any error on the resource,
and would flag success if there were no resource error.
Check for the presence of a parser to detect the case where there's no
data and infer failure from it.

Also move the flush of the VTTParser first in NotifyFinished() since
it could, in rare cases, end up setting m_state to Failed.

* Source/WebCore/loader/TextTrackLoader.cpp:
(TextTrackLoader::notifyFinished):
* LayoutTests/imported/w3c/web-platform-tests/webvtt/parsing/file-parsing/support: Add 'support' folder and files
* LayoutTests/imported/w3c/web-platform-tests/webvtt/parsing/file-parsing/signature-invalid.html: Add Test Case (manually)
* LayoutTests/imported/w3c/web-platform-tests/webvtt/parsing/file-parsing/signature-invalid-expected.txt: Add Test Case Expectation
* LayoutTests/media/track/captions-webvtt/tc000-empty.vtt: Remove old in favor of WPT
* LayoutTests/media/track/track-webvtt-tc000-empty.html: Ditto
* LayoutTests/media/track/track-webvtt-tc000-empty-expected.txt: Ditto